8265750: Fatal error in safepoint.cpp after backport of 8258414

Reviewed-by: mdoerr, sgehwolf